# ainotai

./: .gitignore  Dockerfile  README.md  cli.py  offline-ai-asset-audit-plan.md  pyproject.toml  requirements.txt
config/: audit_rules.yaml  config.yaml  signatures.yaml  thresholds.yaml
datasets/ai_benchmark/: .gitignore  README.md
docs/: AI美术资源离线检测流水线方案-最终版.md  AI美术资源离线检测流水线方案.md  保密美术资源AI离线审计与检测流水线方案.md
input_assets/: sample_ai_metadata.txt
models/community-forensics/: README.md  config.json
models/sdxl-detector/: README.md  config.json  training_params.json
models/sdxl-detector/onnx/: config.json  preprocessor_config.json
scripts/: audit_code.ps1  download_models.ps1  download_models.sh  prepare_offline_bundle.sh  run_doctor.ps1  run_offline_docker.sh  run_offline_scan.sh  run_scan.ps1  set_offline_env.ps1  verify_hashes.sh
src/ai_asset_audit/: audit.py  config.py  metadata.py  offline_guard.py  pipeline.py  report.py  scanner.py
src/ai_asset_audit/audit/: __init__.py  code_audit.py  dependency_audit.py  log_redaction.py
src/ai_asset_audit/forensics/: __init__.py  auxiliary_analysis.py  color_stats.py  ela.py  frequency.py  jpeg_forensics.py  noise.py  tiling.py
src/ai_asset_audit/metadata/: __init__.py  aicheck_runner.py  c2pa_checker.py  exif_analyzer.py  png_chunks.py  signatures.py  xmp_parser.py
src/ai_asset_audit/models/: __init__.py  base.py  (+9 more)
tests/: test_audit.py  test_calibration.py  test_forensics.py  test_metadata.py  test_offline_guard.py  test_pipeline.py  test_report.py  test_scanner.py  test_scorer.py  test_texture_grouping.py
(+16 files in other folders)
