[project]
name = "ai-asset-audit"
version = "0.2.0"
description = "Offline AI asset audit pipeline for confidential art resources"
requires-python = ">=3.10"
dependencies = [
    "opencv-python-headless>=4.10.0",
    "PyYAML>=6.0.0",
    "fbxloader>=0.1.0",
]

[project.optional-dependencies]
models = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
]
audit = [
    "bandit>=1.7.0",
    "pip-audit>=2.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
asset-audit = "cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
